# sedsprintf

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  README.md  build.ninja  build.sh  cmake_install.cmake  compile_commands.json  library.h
.github/workflows/: ci.yaml
include/: enum_setup.h  serialize.h  struct_setup.h  telemetry_packet.h  telemetry_router.hpp
src/: CMakeLists.txt  cmake_install.cmake  config.h  enum_setup.h  serialize.cpp  struct_setup.h  telemetry_packet.h  telemetry_router.cpp  telemetry_router.hpp
tests/: CMakeLists.txt  test.cpp  test_helpers.cpp  test_helpers.h  test_tests.cpp
